# memco

./: .env.example  .gitignore  Dockerfile  IMPLEMENTATION_NOTES.md  Makefile  README.md  docker-compose.yml  dorabotka.md  pyproject.toml
docs/: 2026-04-21_memco_blocker_matrix.md  2026-04-21_memco_executive_verdict_ru.md  2026-04-21_memco_grounded_audit.md  2026-04-21_memco_private_release_gate.md  2026-04-21_memco_release_readiness_gate.md  2026-04-21_memco_single_user_operator_check.md  2026-04-22_docker_engine_blocker.md  2026-04-22_memco_contract_decision.md  2026-04-22_memco_original_brief_status.md  2026-04-22_memco_original_brief_track_decision.md  2026-04-22_memco_repo_local_status_snapshot.md  2026-04-22_postgres_without_docker.md  2026-04-24_memco_audit_evidence_appendix.md  2026-04-24_memco_audit_package_index.md  2026-04-24_memco_audit_package_integrity.md  2026-04-24_memco_audit_package_manifest.json  2026-04-24_memco_blocker_ticket_pack.md  2026-04-24_memco_contract_compliance_matrix.md  2026-04-24_memco_docs_status_map.md  2026-04-24_memco_final_release_audit.md  2026-04-24_memco_final_release_audit_ru.md  2026-04-24_memco_privacy_secret_scan.md  2026-04-24_memco_release_closure.md  2026-04-24_memco_release_remediation_plan.md  BACKUP_RESTORE_RUNBOOK.md  CURRENT_STATUS.md  IMPLEMENTATION_NOTES.md  LOCAL_REPRODUCTION.md  PDF_PARITY_GAPS.md  PRIVATE_PILOT_RUNBOOK.md  PRIVATE_RUNTIME_FILES.md  PRIVATE_SINGLE_USER_CONTRACT.md  SCHEMAS.md  agent_memory_go_live_plan.md  comments.md  programmer_agent_no_shortcuts_release_plan.md  synthius_mem_execution_brief.md  (+2 more)
(+204 files in other folders)
